@@ -55,6 +55,8 @@ using namespace process;
 
 using mesos::internal::master::Master;
 
+using mesos::internal::protobuf::createLabel;
+
 using mesos::internal::slave::LoadQoSController;
 using mesos::internal::slave::Slave;
 
@@ -225,6 +227,8 @@ TEST_F(OversubscriptionTest, FetchResourceUsage)
   EXPECT_NE(0u, offers.get().size());
 
   TaskInfo task = createTask(offers.get()[0], "sleep 10", DEFAULT_EXECUTOR_ID);
+  task.mutable_executor()->mutable_labels()->add_labels()->CopyFrom(
+      createLabel("key", "value"));
 
   Future<TaskStatus> status;
   EXPECT_CALL(sched, statusUpdate(&driver, _))
@@ -251,6 +255,8 @@ TEST_F(OversubscriptionTest, FetchResourceUsage)
   EXPECT_EQ(usage.get().executors(0).executor_info().executor_id(),
             DEFAULT_EXECUTOR_ID);
   ASSERT_EQ(usage.get().executors(0).statistics(), statistics);
+  ASSERT_EQ(task.executor().labels(),
+            usage.get().executors(0).executor_info().labels());
 
   EXPECT_CALL(exec, shutdown(_))
     .Times(AtMost(1));
@@ -669,6 +675,8 @@ TEST_F(OversubscriptionTest, QoSFetchResourceUsage)
   EXPECT_NE(0u, offers.get().size());
 
   TaskInfo task = createTask(offers.get()[0], "sleep 10", DEFAULT_EXECUTOR_ID);
+  task.mutable_executor()->mutable_labels()->add_labels()->CopyFrom(
+      createLabel("key", "value"));
 
   Future<TaskStatus> status;
   EXPECT_CALL(sched, statusUpdate(&driver, _))
@@ -695,6 +703,8 @@ TEST_F(OversubscriptionTest, QoSFetchResourceUsage)
   EXPECT_EQ(usage.get().executors(0).executor_info().executor_id(),
             DEFAULT_EXECUTOR_ID);
   ASSERT_EQ(usage.get().executors(0).statistics(), statistics);
+  ASSERT_EQ(task.executor().labels(),
+            usage.get().executors(0).executor_info().labels());
 
   EXPECT_CALL(exec, shutdown(_))
     .Times(AtMost(1));
